<resources>
    <string name="app_name">LaureApp</string>
    <string name="passwordDimenticata">Forgot password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="accedi">Sign in</string>
    <string name="buttonGuest">Sign as guest</string>
    <string name="iscriviti">Sign up</string>
    <string name="orLabel">-- Or --</string>
    <string name="reset">Reset password</string>
    <string name="confermaEmail">Confirm email</string>
    <string name="confermaPassword">Confirm password</string>
    <string name="salva">Save</string>
    <string name="title_thesis">Thesis proposal</string>
    <string name="title_messages">Issues</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="titolo">Title</string>
    <string name="argomenti">Topic</string>
    <string name="email_co_relatore">Email Co-advisor</string>
    <string name="tempistiche">Schedule in months</string>
    <string name="numero_esami_mancanti">Missing exams</string>
    <string name="capacitaRichiesta">Required skills</string>
    <string name="media">GPA</string>
    <string name="disponibilita">Available</string>
    <string name="aggiungi">Add</string>
    <string name="nome">Name</string>
    <string name="cognome">Surname</string>
    <string name="codiceFiscale">Tax identification number</string>
    <string name="registratiCome">Sign up as:</string>
    <string name="studente">Student</string>
    <string name="relatore">Advisor</string>
    <string name="matricola_relatore">ID Advisor</string>
    <string name="email_relatore">Advisor\'s Email</string>
    <string name="co_relatore">Co-advisor</string>
    <string name="avanti">Next</string>
    <string name="organizzazione">Company</string>
    <string name="matricola">Id number</string>
    <string name="modifica">Edit</string>
    <string name="corsiDiStudio">Courses:</string>
    <string name="corsoDiStudio">Course</string>
    <string name="universita">University</string>
    <string name="cerca">Search…</string>
    <string name="modalitaScura">Dark mode</string>
    <string name="esci">Log out</string>
    <string name="invia">Send</string>
    <string name="scriviMessaggio">Type your message…</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_surname">Edit Surname</string>
    <string name="confirm">Confirm</string>
    <string name="edit_e_mail">Edit e-mail</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_tax_dentification_number">Edit Tax dentification number</string>
    <string name="edit_id_number">Edit ID number</string>
    <string name="edit_courses">Edit Courses:</string>
    <string name="edit_gpa">Edit GPA</string>
    <string name="dettagli">Details</string>
    <string name="mystudent">My student</string>
    <string name="segnalazioni">Issues</string>
    <string name="scanQr">Scan QR Code</string>
    <string name="condividi">Share</string>
    <string name="tutte">All</string>
    <string name="filtra">FILTER</string>
    <string name="ordinaper">Order by</string>
    <string name="ruolo">Role</string>
    <string name="utente">Issue sender</string>
    <string name="task">Task</string>
    <string name="chiusa">Closed</string>
    <string name="data">Creation date</string>
    <string name="ordina">Order ascendent</string>
    <string name="richieste">Request</string>
    <string name="tesisti">Students</string>
    <string name="accetta">ACCEPT</string>
    <string name="rifiuta">DENY</string>
    <string name="skillStudente">Student skills</string>
    <string name="indietro_calendario"><![CDATA[<]]></string>
    <string name="avantigiorno"><![CDATA[>]]></string>
    <string name="lunedi">MON</string>
    <string name="domenica">SUN</string>
    <string name="martedi">TUE</string>
    <string name="mercoledi">WED</string>
    <string name="giovedi">THU</string>
    <string name="venerdi">FRI</string>
    <string name="sabato">SAT</string>
    <string name="ricevimenti">MEETINGS</string>
    <string name="data_prevista">Submission date</string>
    <string name="scarica_tesi">DOWNLOAD THESIS</string>
    <string name="carica_tesi">UPLOAD THESIS</string>
    <string name="elimina">REMOVE</string>
    <string name="crea_task">CREATE TASK</string>
    <string name="visualizza_task">SHOW TASK</string>
    <string name="aggiungi_relatore">ADD COADVISOR</string>
    <string name="suggerimenti">Suggestions</string>
    <string name="stato">State</string>
    <string name="materiale">Resources</string>
    <string name="scarica_materiale">UPLOAD</string>
    <string name="carica_materiale">DOWNLOAD</string>
    <string name="richiedi_ricevimento">Having troubles? Meet with your advisor</string>
    <string name="richiedi_ora">BOOK NOW</string>
    <string name="tesi">Thesis</string>
    <string name="descrizione">Description</string>
    <string name="data_consegna_formato">dd/m/y</string>
    <string name="data_consegna">Submission Date</string>
    <string name="messaggio">Message</string>
    <string name="risposta">Answer</string>
    <string name="opzionale">*Optional</string>
    <string name="richiesta_ricevimento">Request a meeting with your supervisor</string>
    <string name="data_proposta">Date</string>
    <string name="riorganizza">Re-schedule</string>
    <string name="orario">Select hour</string>
    <string name="seleziona_data">Select date</string>
    <string name="crea_segnalazione">Create issue</string>
    <string name="mythesis">My thesis</string>
    <string name="richiesta_tesi">Thesis</string>
    <string name="ab_tesi">Abstract</string>
    <string name="descrivi_skill">Describe your skills</string>
    <string name="ultimo_caricamento">Last upload</string>
    <string name="tesi_completate">Completed Thesis</string>
    <string name="ok">Ok</string>
    <string name="campi_vuoti_errore">Fill al the required fields</string>
    <string name="campo_obbligatorio">Required</string>
    <string name="scan_qr_flash">Volume up per usare il flash</string>
    <string name="scan_qr_error_qr">The QRCode doesn\'t match any thesis</string>
    <string name="permesso_richiesta">Required Permission</string>
    <string name="permesso_camera">The permession is required to use the camera for the QRcode scanning</string>
    <string name="permesso_storage">The permission is required to select and download files</string>
    <string name="permesso_negato">Permissions denied</string>
    <string name="login_fallito">Access failed</string>
    <string name="recupero_password_riuscito">Password resetted</string>
    <string name="recupero_password_password_error">Passwords don\'t match</string>
    <string name="recupero_password_email_error">Emails don \' t match or Email doesn\'t exist</string>
    <string name="stringa_upload">-Uploaded from: %1$s the %2$s</string>
    <string name="storage_errore_accesso">Impossible to access to the files</string>
    <string name="ricevimento_accettato">Accepted</string>
    <string name="ricevimento_rifiutato">Denied</string>
    <string name="ricevimento_attesa_relatore">Waiting for advisor\'s answer</string>
    <string name="ricevimento_attesa_tesista">Waiting for student\'s answer</string>
    <string name="rispondi">Answer</string>
    <string name="richiesta_tesi_attesa">Waiting for request\'s approval</string>
    <string name="richiesta_tesi_rifiutata">Request denied</string>
    <string name="task_data_assegnazione">Assignment date: %1$s</string>
    <string name="task_assegnato">Assegned</string>
    <string name="task_iniziato">Started</string>
    <string name="task_in_completamento">Working</string>
    <string name="task_in_revisione">Reviewing</string>
    <string name="task_completato">Completed</string>
    <string name="richiedi">Request</string>
    <string name="tesi_disponibile">Available</string>
    <string name="tesi_non_disponibile">Not available</string>
    <string name="modifica_successo">Modified with success</string>
    <string name="conferma">Confirm</string>
    <string name="indietro">Back</string>
    <string name="registrazione_fallita">Registration failed</string>
    <string name="registrazione_account_corelatore">Create a new coadvisor account?</string>
    <string name="registrazione_account_relatore">Create a new advisor account?</string>
    <string name="registrazione_account_tesista">Create a new student account?</string>
    <string name="matricola_esistente">ID already in use</string>
    <string name="seleziona_data_picker">Select a date</string>
    <string name="ricevimento_modifica">Modify appointment?</string>
    <string name="ricevimento_crea">Send appointment request?</string>
    <string name="ricevimento_crea_successo">Request successfully sended</string>
    <string name="ricevimento_modifica_successo">Answer successfully sended</string>
    <string name="ricevimento_accettare">Accept appointment?</string>
    <string name="ricevimento_accettare_successo">Appointment accepted</string>
    <string name="ricevimento_rifiutare">Deny appointment</string>
    <string name="ricevimento_rifiutare_successo">Appointment refused</string>
    <string name="data_inferiore_oggi">The selected date is inferiori or equal to today\'s</string>
    <string name="operazione_fallita">Failed operation</string>
    <string name="richiesta_tesi_conferma">Send thesis request?</string>
    <string name="richiesta_tesi_sucesso">Thesis request successfully sended</string>
    <string name="tesista">Student</string>
    <string name="requisito_richiesto">Required requirement: </string>
    <string name="richiesta_accetta_conferma">Accept student?</string>
    <string name="richiesta_accetta_successo">Request successfully accepted</string>
    <string name="richiesta_rifiuta_conferma">Refuse student?</string>
    <string name="richiesta_rifiuta_successo">Request successfully refused</string>
    <string name="richiesta_tesista_errore">The student already has e thesis assigned</string>
    <string name="codice_fiscale_esistente">Tax ID already exists</string>
    <string name="email_esistente">Email already exists</string>
    <string name="media_errore">GPA is not included between 18 and 30</string>
    <string name="segnalazione_crea_conferma">Create report?</string>
    <string name="segnalazione_crea_successo">Report successfully created</string>
    <string name="impostaLingua">Select language</string>
    <string name="italiano">Italian</string>
    <string name="inglese">English</string>
    <string name="seleziona_pdf">Select a PDF File</string>
    <string name="file_caricato_successo">File uploaded successfully</string>
    <string name="task_crea_richiesta">Create a new task for the student?</string>
    <string name="task_crea_successo">Task successfully created</string>
    <string name="no_file">No uploaded file</string>
    <string name="task_data_inizio">Start Date: </string>
    <string name="task_data_fine">Deadline date: </string>
    <string name="task_modifica_successo">Task successfully modified</string>
    <string name="tesi_registra_successo">Thesis successfully registered</string>
    <string name="tesi_modifica_successo">Thesis successfully modified</string>
    <string name="tesi_registra_richiesta">Create a new thesis?</string>
    <string name="visualizzazioni">Views</string>
    <string name="relatore_non_esiste">Advisor doesn\'t exist</string>
    <string name="inserisci_titolo_tesi">Insert thesis title</string>
    <string name="condividi_chooser">Share with: </string>
    <string name="condividi_messaggio">Take a look at this thesis!</string>
    <string name="attesa_approvazione">Waiting for approval</string>
    <string name="richiesta_collaboarzione_rifiutata">Request denied</string>
    <string name="richiesta_collaboarzione_accettata">Request accepted</string>
</resources>