<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.relatore.GestioneTesiFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

    <EditText
        android:id="@+id/argomenti_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/argomenti"
        android:inputType="text"/>

    <EditText
        android:id="@+id/corelatore_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/co_relatore"
        android:inputType="text"/>

    <EditText
        android:id="@+id/tempistiche_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tempistiche"
        android:inputType="text"/>

    <EditText
        android:id="@+id/media_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/media"
        android:inputType="text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/aggiungi"
            android:layout_gravity="center"></Button>
    </LinearLayout>

</FrameLayout>