<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.tesiscelta.TesiSceltaFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                android:id="@+id/nomeStudente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/studente"
                android:textColor="@color/primaryColor"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/titoloTesi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Titolo tesi richiesta"
                android:textColor="@color/primaryColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/argomentoTesi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="2"
                android:text="Descrizione tesi"
                android:textSize="16sp" />

            <androidx.constraintlayout.utils.widget.MotionLabel
                android:id="@+id/label_universita"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/universita" />

            <TextView
                android:id="@+id/universita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="Universita"
                android:textSize="18sp" />

            <androidx.constraintlayout.utils.widget.MotionLabel
                android:id="@+id/label_corso"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/corsoDiStudio" />

            <TextView
                android:id="@+id/corso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="Corso di studio"
                android:textSize="18sp" />

            <androidx.constraintlayout.utils.widget.MotionLabel
                android:id="@+id/label_abstract"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/argomenti" />

            <TextView
                android:id="@+id/riassunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="abstract tesi"
                android:textSize="18sp" />


            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tempistiche" />

            <TextView
                android:id="@+id/tempistiche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="Description"
                android:textSize="18sp" />

            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/numero_esami_mancanti" />

            <TextView
                android:id="@+id/esamiMancanti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="studente/richiesti"
                android:textSize="16sp" />

            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/media" />

            <TextView
                android:id="@+id/media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="studente/richiesti"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.constraintlayout.utils.widget.MotionLabel
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/capacitaRichiesta" />

                <androidx.constraintlayout.utils.widget.MotionLabel
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/skillStudente" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/capacitaRichiesta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Skill required"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/capacitaEffettive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Student skills"
                    android:textSize="16sp" />

            </LinearLayout>


            <androidx.constraintlayout.utils.widget.MotionLabel
                android:id="@+id/label_data_consegna"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/data_prevista" />

            <TextView
                android:id="@+id/dataConsegna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="2"
                android:text="data consegna"
                android:textSize="16sp" />

            <androidx.constraintlayout.utils.widget.MotionLabel
                android:id="@+id/label_corelatore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/co_relatore" />

            <TextView
                android:id="@+id/corelatore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="2"
                android:text="nome"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/email_corelatore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="2"
                android:text="email"
                android:textSize="16sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginBottom="16dp" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_co"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/aggiungi_corelatore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/aggiungi_relatore"
                />

            <Button
                android:id="@+id/rimuovi_corelatore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/red"
                android:text="@string/elimina" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/crea_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:minHeight="48dp"
                    android:text="@string/crea_task"
                    android:gravity="center"
                    android:textColor="@color/primaryColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/visualizza_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:minHeight="48dp"
                    android:gravity="center"
                    android:text="@string/visualizza_task"
                    android:textColor="@color/primaryColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>



            </LinearLayout>

            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ultimo_caricamento" />

            <TextView
                android:id="@+id/tesi_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="2"
                android:text="@string/tesi"
                android:textSize="16sp" />

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/scarica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/scarica_tesi" />

                <Button
                    android:id="@+id/carica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="@color/zxing_possible_result_points"
                    android:text="@string/carica_tesi" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</FrameLayout>